--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,6 @@
     <dimen name="margin_bottom_12">12dp</dimen>
     <dimen name="sizeProgressBar">44dp</dimen>
     <dimen name="constraintGuide_16">16dp</dimen>
+    <dimen name="text_size_24">24sp</dimen>
+    <dimen name="text_size_18">18sp</dimen>
 </resources>
