--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -195,4 +195,17 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:inputType">textCapSentences</item>
     </style>
+
+    <style name="button_info_playlist">
+        <item name="android:background">?attr/colorSecondary</item>
+        <item name="android:textSize">@dimen/text_size_16</item>
+        <item name="android:fontFamily">@font/ys_text_regular</item>
+        <item name="android:inputType">textCapSentences</item>
+        <item name="android:gravity">start|center_vertical</item>
+        <item name="android:paddingTop">@dimen/margin_settings_20</item>
+        <item name="android:paddingBottom">@dimen/margin_settings_20</item>
+        <item name="android:layout_marginStart">@dimen/margin_16</item>
+        <item name="android:layout_marginEnd">@dimen/margin_16</item>
+        <item name="android:stateListAnimator">@null</item>
+    </style>
 </resources>
